Correções na RF_B3, RF_B6 e RF_F1 feitas e testadas
